Trying to go back to umu
I really want umu to work. The struggle right now is running it in the separate working directory. https://github.com/Open-Wine-Components/umu-launcher/issues/63#issuecomment-2628751703 says we have to do jank workarounds like this one (which does not work).

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "mashumaro>=3.16",
+    "pylnk3>=0.4.3",
     "pyunpack>=0.3",
     "pyyaml>=6.0.2",
     "requests>=2.32.5",
